# como-harness

./: .gitignore  README.md  SKILL.md  install.md
core/: README.md  pyproject.toml
core/src/como_core/: __init__.py  _common.py  ads.py  company.py  crm.py  geo.py  group.py  job.py  leads.py  platform.py  post.py  profile.py  service.py
sdk/: .gitignore  CLAUDE.md  README.md  pyproject.toml
sdk/specs/: _index.json  ads__get.json  ads__search.json  company__get.json  company__posts.json  company__search.json  geo__search.json  group__get.json  group__search.json  job__get.json  job__search.json  leads__search.json  post__comment_reactions.json  post__comment_replies.json  post__comments.json  post__company_posts.json  post__get.json  post__group_posts.json  post__reactions.json  post__search.json  post__user_posts.json  profile__comments.json  profile__get.json  profile__posts.json  profile__reactions.json  profile__search.json  service__search.json
sdk/src/como/: __init__.py  _autoupdate.py  _config.py  _params.py  _pkce.py  _transport.py  _workos_auth.py  client.py  errors.py  pagination.py
sdk/src/como/cli/: __init__.py  _app.py  _output.py  _resolve.py  ads.py  agents.py  attributes.py  auth.py  browser.py  company.py  geo.py  group.py  job.py  leads.py  lists.py  objects.py  post.py  profile.py  records.py  run.py  service.py  views.py
sdk/src/como/resources/: __init__.py  _base.py  account.py  ads.py  agents.py  attributes.py  browser.py  company.py  gateway.py  geo.py  group.py  job.py  leads.py  lists.py  objects.py  post.py  profile.py  records.py  service.py  views.py
sdk/tests/: test_agents_command.py  test_auth_command.py  test_autoupdate.py  test_browser_command.py  test_crm_full_surface.py  test_crm_resources.py  test_pkce.py  test_platform_resources.py  test_profile.py  test_records_command.py  test_resources.py  test_run_command.py  test_transport_refresh.py  test_workos_auth.py
skills/como/: SKILL.md  install.md
skills/como/references/: agents.md  cli.md  cloud-browser.md  crm-schema.md  lists.md  records.md  workflows.md
