[project]
name = "como-core"
version = "0.0.1"
description = "Shared Pydantic types and core protocols for Como — consumed by the public SDK (como) and the backend (como-api)."
readme = "README.md"
authors = [
    { name = "Saner Cakir", email = "saner@generality.inc" },
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "RUF012",
]

[tool.ruff.format]
quote-style = "double"
