# Distribution name is `como-sdk` (the `como` name is taken on PyPI).
# Import name (`import como`) and the `como` CLI command are unchanged.
[project]
name = "como-sdk"
version = "0.0.1"
description = "Como python SDK and CLI"
readme = "README.md"
authors = [
    { name = "Saner Cakir", email = "saner@generality.inc" }
]
requires-python = ">=3.13"
dependencies = [
    "como-core==0.0.1",
    "httpx>=0.28.1",
    "pydantic>=2",
    "typer>=0.25.1",
]

[project.scripts]
como = "como.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

# Distribution is `como-sdk` but the importable module stays `como`.
[tool.uv.build-backend]
module-name = "como"

[tool.uv.sources]
como-core = { path = "../core", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
    "RUF",          # ruff-specific
]
ignore = [
    # Pydantic model fields like `elements: list[X] = []` are safe — Pydantic v2 deep-copies
    # defaults at instance creation, so each instance gets a fresh list.
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
# CLI command files are mostly typer.Option(..., help="...") lines whose help text is
# intentionally long-form; line-length is not meaningful there.
"src/como/cli/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
